# esp-idf

./: install.sh
components/azure-rtos/: CMakeLists.txt  components.code-workspace  workspace.code-workspace
components/azure-rtos/threadx/ports/risc-v32/gnu/: CMakeLists.txt
components/azure-rtos/threadx/ports/risc-v32/gnu/inc/: tx_esp32.h  tx_port.h
components/azure-rtos/threadx/ports/risc-v32/gnu/src/: tx_esp32.c  tx_thread_context_restore.S  tx_thread_schedule.S  tx_thread_stack_build.S
tools/cmake/: project.cmake
